--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,11 +9,11 @@ on:
   schedule:
     - cron: '31 4 * * *'
   push:
-    branches: [ main ]
+    branches: [ main, nightmarebot ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, nightmarebot ]
 
 env:
   # Use docker.io for Docker Hub if empty
