--- a/cog.yaml
+++ b/cog.yaml
@@ -26,6 +26,7 @@ build:
     - "torch-fidelity==0.3.0"
     - "transformers==4.19.4"
     - "resize-right==0.0.2"
+    - "jupyterlab==3.3.4"
 
   run:
     - mkdir -p /src
