--- a/cog.yaml
+++ b/cog.yaml
@@ -37,8 +37,8 @@ build:
     - pip install realesrgan
     - git clone https://github.com/apolinario/Multi-Modal-Comparators /tmp/Multi-Modal-Comparators --branch gradient_checkpointing && cd /tmp/Multi-Modal-Comparators && poetry build && pip install dist/mmc*.whl
     - cd /tmp; python Multi-Modal-Comparators/src/mmc/napm_installs/__init__.py
-    - cd /tmp; wget https://raw.githubusercontent.com/NightmareAI/majesty-diffusion/cog/models.py
-    - echo "Downloading Majesty Diffusion models..."
+    - echo "Downloading majesty-diffusion models..."
+    - cd /tmp; wget https://raw.githubusercontent.com/NightmareAI/majesty-diffusion/790b3e5f9fbc5a4339c28d289e2330a80ae34f6a/models.py
     - cd /tmp; python models.py --model-path /root/.cache/majesty-diffusion
     - echo "Downloading CLIP models..."
     - cd /tmp; python models.py --clip "[clip - mlfoundations - ViT-B-16--openai]"
