--- a/cog.yaml
+++ b/cog.yaml
@@ -48,10 +48,18 @@ build:
     - wget -o /root/.cache/majesty-diffusion/openimages_512x_png_embed224.npz https://models.nmb.ai/majesty/openimages_512x_png_embed224.npz
     - wget -o /root/.cache/majesty-diffusion/sa_0_4_vit_b_16_linear.pth https://models.nmb.ai/majesty/sa_0_4_vit_b_16_linear.pth
     - wget -o /root/.cache/majesty-diffusion/sa_0_4_vit_b_32_linear.pth https://models.nmb.ai/majesty/sa_0_4_vit_b_32_linear.pth
+    #- wget -o /root/.cache/majesty-diffusion/erlich.pt https://models.nmb.ai/majesty/erlich.pt
+    #- wget -o /root/.cache/majesty-diffusion/ongo.pt https://models.nmb.ai/majesty/ongo.pt
     - echo "Downloading CLIP models..."
     - mkdir -p /root/.cache/clip; wget -o /root/.cache/clip/ViT-B-16.pt https://models.nmb.ai/clip/ViT-B-16.pt
     - wget -o /root/.cache/clip/ViT-L-14.pt https://models.nmb.ai/clip/ViT-L-14.pt
     - wget -o /root/.cache/clip/vit_b_32-laion2b_e16-af8dbd0c.pth https://models.nmb.ai/clip/vit_b_32-laion2b_e16-af8dbd0c.pth
+    #- wget -o /root/.cache/clip/ViT-B-32.pt https://models.nmb.ai/clip/ViT-B-32.pt
+    #- wget -o /root/.cache/clip/ViT-L-14-336px.pt https://models.nmb.ai/clip/ViT-L-14-336px.pt
+    #- wget -o /root/.cache/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt https://models.nmb.ai/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt
+    #- wget -o /root/.cache/clip/RN50x16.pt https://models.nmb.ai/clip/RN50x16.pt
+    #- wget -o /root/.cache/clip/RN50x4.pt https://models.nmb.ai/clip/RN50x4.pt
+    #- wget -o /root/.cache/clip/RN50x64.pt https://models.nmb.ai/clip/RN50x64.pt
 
 image: "r8.im/nightmareai/majesty-diffusion-test"
 predict: "predict.py:Predictor"
