batching, all models

--- a/cog.yaml
+++ b/cog.yaml
@@ -53,15 +53,15 @@ build:
     - wget --quiet --output-document=/root/.cache/clip/ViT-L-14.pt https://models.nmb.ai/clip/ViT-L-14.pt
     - wget --quiet --output-document=/root/.cache/clip/vit_b_32-laion2b_e16-af8dbd0c.pth https://models.nmb.ai/clip/vit_b_32-laion2b_e16-af8dbd0c.pth
     - mkdir -p /root/.cache/torch/hub/checkpoints; wget --quiet --output-document=/root/.cache/torch/hub/checkpoints/vgg16-397923af.pth https://download.pytorch.org/models/vgg16-397923af.pth
-    #- echo "Downloading optional models..."
-    #- wget --quiet --output-document=/root/.cache/majesty-diffusion/erlich.pt https://models.nmb.ai/majesty/erlich.pt
-    #- wget --quiet --output-document=/root/.cache/majesty-diffusion/ongo.pt https://models.nmb.ai/majesty/ongo.pt
-    #- wget --quiet --output-document=/root/.cache/clip/ViT-B-32.pt https://models.nmb.ai/clip/ViT-B-32.pt
-    #- wget --quiet --output-document=/root/.cache/clip/ViT-L-14-336px.pt https://models.nmb.ai/clip/ViT-L-14-336px.pt
-    #- wget --quiet --output-document=/root/.cache/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt https://models.nmb.ai/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt
-    #- wget --quiet --output-document=/root/.cache/clip/RN50x16.pt https://models.nmb.ai/clip/RN50x16.pt
-    #- wget --quiet --output-document=/root/.cache/clip/RN50x4.pt https://models.nmb.ai/clip/RN50x4.pt
-    #- wget --quiet --output-document=/root/.cache/clip/RN50x64.pt https://models.nmb.ai/clip/RN50x64.pt
+    - echo "Downloading optional models..."
+    - wget --quiet --output-document=/root/.cache/majesty-diffusion/erlich.pt https://models.nmb.ai/majesty/erlich.pt
+    - wget --quiet --output-document=/root/.cache/majesty-diffusion/ongo.pt https://models.nmb.ai/majesty/ongo.pt
+    - wget --quiet --output-document=/root/.cache/clip/ViT-B-32.pt https://models.nmb.ai/clip/ViT-B-32.pt
+    - wget --quiet --output-document=/root/.cache/clip/ViT-L-14-336px.pt https://models.nmb.ai/clip/ViT-L-14-336px.pt
+    - wget --quiet --output-document=/root/.cache/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt https://models.nmb.ai/clip/vit_b_16_plus_240-laion400m_e32-699c4b84.pt
+    - wget --quiet --output-document=/root/.cache/clip/RN50x16.pt https://models.nmb.ai/clip/RN50x16.pt
+    - wget --quiet --output-document=/root/.cache/clip/RN50x4.pt https://models.nmb.ai/clip/RN50x4.pt
+    - wget --quiet --output-document=/root/.cache/clip/RN50x64.pt https://models.nmb.ai/clip/RN50x64.pt
 
-image: "r8.im/nightmareai/majesty-diffusion-test"
+image: "r8.im/nightmareai/majesty-diffusion"
 predict: "predict.py:Predictor"
